--- a/js-inl2/index.html
+++ b/js-inl2/index.html
@@ -15,9 +15,11 @@
                 <h2>Search</h2>
                 <input type="text" id="search" placeholder="type something...">
             </header>
+
+            <!--result box-->
             <div class="search-box-section search-box-section-body">
                 <ul class="search-results" id="search-results">
-                    
+
                 </ul>
             </div>
         </div>
