--- a/js-inl2/index.html
+++ b/js-inl2/index.html
@@ -22,6 +22,7 @@
 
                 </ul>
             </div>
+            <h2 id="error" class="errorM"></h2>
         </div>
     </div>
     <script src="main.js"></script>
